# FO76-Tools

./: .gitignore  CLAUDE.md  README.md  todos.md
ba2/: CLAUDE.md  Cargo.toml  README.md  justfile
ba2/src/: compress.rs  extract.rs  format.rs  hash.rs  lib.rs  reader.rs  writer.rs
ba2/tests/: compress.rs  extract.rs  format.rs  hash.rs  reader.rs  writer.rs
ba2/tests/common/: mod.rs
esm/: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile  pyproject.toml  todos.md
esm-viewer/: .gitignore  CLAUDE.md  Cargo.toml  README.md  electron-builder.yml  electron.vite.config.ts  justfile  package-lock.json  package.json  todos.md  tsconfig.json  tsconfig.node.json  vitest.config.ts
esm-viewer/app/: package-lock.json  package.json  tsconfig.node.json  tsconfig.tsbuildinfo
esm-viewer/bindings/napi/: Cargo.toml  index.js  package-lock.json  package.json  smoke.mjs
esm-viewer/schema/: fo76.json  fo76.overrides.json
esm-viewer/src/: ba2.rs  compress.rs  ctda.rs  decode.rs  diff.rs  format.rs  formid.rs  index.rs  lib.rs  reader.rs  schema.rs  strings.rs  wildcard.rs
esm-viewer/src/main/: ipc-validators.test.ts  ipc-validators.ts  ipc.ts
esm-viewer/src/preload/: index.ts
esm-viewer/src/renderer/: index.html
esm-viewer/src/shared/: api-types.ts  ipc-contract.ts
esm-viewer/static/: compare.html
esm-viewer/todos/: 03-schema-coverage.md  05-napi-wasm-binding.md  07-remove-static-ui-xss-sinks.md  11-add-audit-regression-tests.md  12-split-gui-to-toplevel.md
esm-viewer/tools/: discord_chunker.py  gen_discord_summary.py  gen_patch_notes.py
esm-viewer/tools/extractor/: audit.py  extract.py  parity-exceptions.json
esm/.cargo/: config.toml
esm/.claude/agents/: patch-notes-writer.md
esm/app/: electron-builder.yml  package-lock.json
esm/bindings/napi/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  smoke.mjs
esm/schema/: fo76.ctda.json  fo76.json  fo76.overrides.json  hardcoded_fo76.json
esm/skills/esm-cli/: SKILL.md
esm/src/: ba2.rs  backend.rs  chase.rs  compress.rs  ctda.rs  curves.rs  decode.rs  diff.rs  discover.rs  format.rs  formid.rs  hardcoded.rs  index.rs  ipc.rs  lib.rs  mindex.rs  query.rs  reader.rs  registry.rs  schema.rs  sources.rs  strings.rs  tree.rs  walk.rs  wildcard.rs
esm/src/decode/: mod.rs  rules.rs  scope.rs  vmad.rs
esm/static/: compare.html  index.html
esm/tests/: ba2.rs  chase.rs  curves.rs  decode_coverage.rs  decode_records.rs  diff.rs  gen_bindings.rs  hardcoded.rs  ipc.rs  parity.rs  query.rs  reader.rs  refs.rs  sources.rs  strings.rs  walk.rs  wildcard.rs
esm/tests/common/: mod.rs
esm/todos/: 05-napi-wasm-binding.md  06-harden-http-electron-surfaces.md  07-remove-static-ui-xss-sinks.md  08-harden-binary-parsing-cache.md  09-optimize-index-decode-xrefs.md  10-cleanup-api-docs-repo-hygiene.md  11-add-audit-regression-tests.md  12-split-gui-to-toplevel.md  13-fix-last-36h-review-findings.md
esm/tools/: build_bundles.py  discord_chunker.py  esm_daemon.py  esm_gateway.py  gen_discord_summary.py  gen_patch_notes.py  make_patch_notes.py  patch_notes_categories.json  patch_notes_tiers.json  patchnotes_lib.py  render_comprehensive.py  run_lints.py  slice_bundles.py  triage_bundles.py  update_manifest.py
esm/tools/chase/: chase.py
todos/: fix-tests.md  (+1 more)
(+76 files in other folders)
