[workspace]
members = [".", "bindings/napi"]

[package]
name = "esm"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[features]
server = ["dep:tokio", "dep:axum", "dep:tower-http"]

[lib]
name = "esm"
path = "src/lib.rs"

[[bin]]
name = "esm"
path = "src/bin/cli.rs"

[[bin]]
name = "esm-server"
path = "src/bin/server.rs"
required-features = ["server"]

[dependencies]
anyhow = "1"
bincode = "1.3"
byteorder = "1.5"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
lz4_flex = "0.11"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.8", optional = true }
tower-http = { version = "0.7", features = ["cors", "trace"], optional = true }
